Fixed z-index of footer navbar

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -6,6 +6,7 @@
         padding-bottom: 0px;
         border-top: 0px;
         height: 100%;
+        z-index: 1;
 
         display: flex;
         flex-direction: row;
@@ -69,6 +70,7 @@
 
             .toTheTop {
                 text-align: end;
+                color: $gray;
 
                 a:hover{
                     color: $dark-gray;
